# kanji-2-kana

./: .gitignore  README.md  main.py  pyproject.toml
.cursor/rules/: gemini.mdc  typing.mdc  uv.mdc
inference/: README.md  fast_inference.py  inference_gemma3_kanji2kana.py
train/: train_gemma3_1b_kanji2kana_grpo_improved.py  train_gemma3_1b_kanji2kana_grpo_optimized.py  train_gemma3_1b_kanji2kana_sft.py  train_gemma3_1b_kanji2kana_sft_l4_optimized.py  train_qwen_kanji2kana_seq2seq_sft.py
unsloth/: gemma3_(4b).py  huggingface_course_gemma3_(1b)_grpo.py  qwen3_(14b)_alpaca.py  qwen3_(14b)_reasoning_conversational.py  qwen3_(4b)_grpo.py
unsloth_compiled_cache/: AqlmLoraLinear_peft_forward.py  AwqLoraLinear_peft_forward.py  BatchNorm1d.py  Conv2d.py  ConvTranspose1d.py  ConvTranspose2d.py  ConvTranspose3d.py  GPTQLoraLinear_peft_forward.py  GroupNorm.py  LayerNorm.py  Linear4bit_peft_forward.py  Linear8bitLt_peft_forward.py  Linear_peft_forward.py  LoraParallelLinear_peft_forward.py  RMSNorm.py  UnslothAlignPropTrainer.py  UnslothDDPOTrainer.py  unsloth_compiled_module_gemma3.py  unsloth_compiled_module_siglip.py
