[project]
name = "kanji-2-kana"
version = "0.1.0"
description = "Kanji to Kana conversion model training"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.7.0",
    "datasets>=3.6.0",
    "evaluate>=0.4.3",
    "google-genai>=1.16.1",
    "huggingface-hub>=0.32.0",
    "psutil>=7.0.0",
    "safetensors>=0.5.3",
    "sentencepiece>=0.2.0",
    "torch>=2.0.0",
    "transformers==4.51.3",
    "sentencepiece",
    "tensorboardx",
    "bitsandbytes>=0.45.5",
    "setuptools>=80.8.0",
    "trl<0.9.0",
    "peft>=0.15.2",
    "unsloth>=2025.5.7",
    "protobuf<4.0.0",
    "torchvision>=0.22.0",
    "tensorboard>=2.19.0",
]

[project.optional-dependencies]
build = ["torch", "setuptools", "packaging"]
compile = ["flash-attn"]

[tool.uv]
no-build-isolation-package = ["flash-attn"]

[[tool.uv.dependency-metadata]]
name = "flash-attn"
version = "2.7.3"
requires-dist = ["torch", "einops"]
